feat: Commitlint setup done

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Jitendra Sahoo [7978020151]",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@types/node": "^22.7.3",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
