--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "start": "nodemon dist/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "format:check":"prettier . --check",
+    "format:fix":"prettier . --fix",
     "prepare": "husky"
   },
   "lint-staged": {
     "*.ts": [
-      "npm run lint:fix"
+      "npm run lint:fix",
+      "npm run format:fix"
     ]
   },
   "author": "Jitendra Sahoo [7978020151]",
@@ -25,9 +28,11 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.7.3",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
+    "prettier": "3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.7.0"
