--- a/package.json
+++ b/package.json
@@ -1,40 +1,45 @@
 {
-  "name": "ts-backend-production-setup",
-  "version": "1.0.0",
-  "description": "This project setup in typescript and MongoDB for production.",
-  "main": "src/server.js",
-  "scripts": {
-    "dist": "npx tsc",
-    "dev": "nodemon src/server.ts",
-    "start": "nodemon dist/server.js",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format:check":"prettier . --check",
-    "format:fix":"prettier . --fix",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "npm run lint:fix",
-      "npm run format:fix"
-    ]
-  },
-  "author": "Jitendra Sahoo [7978020151]",
-  "license": "ISC",
-  "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.11.1",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.7.3",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "nodemon": "^3.1.7",
-    "prettier": "3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0"
-  }
+    "name": "ts-backend-production-setup",
+    "version": "1.0.0",
+    "description": "This project setup in typescript and MongoDB for production.",
+    "main": "src/server.js",
+    "scripts": {
+        "dist": "npx tsc",
+        "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
+        "start": "cross-env NODE_ENV=production node dist/server.js",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format:check": "prettier . --check",
+        "format:fix": "prettier . --fix",
+        "prepare": "husky"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run lint:fix",
+            "npm run format:fix"
+        ]
+    },
+    "author": "Jitendra Sahoo [7978020151]",
+    "license": "ISC",
+    "devDependencies": {
+        "@commitlint/cli": "^19.5.0",
+        "@commitlint/config-conventional": "^19.5.0",
+        "@eslint/js": "^9.11.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^22.7.3",
+        "eslint": "^9.11.1",
+        "eslint-config-prettier": "^9.1.0",
+        "husky": "^9.1.6",
+        "lint-staged": "^15.2.10",
+        "nodemon": "^3.1.7",
+        "prettier": "3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.7.0"
+    },
+    "dependencies": {
+        "cross-env": "^7.0.3",
+        "dotenv-flow": "^4.1.0"
+    }
 }
+
