--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@commitlint/config-conventional": "^19.5.0",
         "@eslint/js": "^9.11.1",
         "@types/eslint__js": "^8.42.3",
+        "@types/express": "^5.0.0",
         "@types/node": "^22.7.3",
         "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
@@ -39,7 +40,7 @@
     },
     "dependencies": {
         "cross-env": "^7.0.3",
-        "dotenv-flow": "^4.1.0"
+        "dotenv-flow": "^4.1.0",
+        "express": "^4.21.0"
     }
 }
-
