--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "lint:fix": "eslint . --fix",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --fix",
-        "prepare": "husky"
+        "prepare": "husky",
+        "migrate:dev":"cross-env MIGRATE_MODE=development node script/migration.js",
+        "migrate:prod":"cross-env MIGRATE_MODE=production node script/migration.js"
     },
     "lint-staged": {
         "*.ts": [
@@ -46,6 +48,7 @@
         "express": "^4.21.0",
         "mongoose": "^8.7.0",
         "source-map-support": "^0.5.21",
+        "ts-migrate-mongoose": "^3.8.4",
         "winston": "^3.14.2",
         "winston-mongodb": "^6.0.0"
     }
