--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "format:check": "prettier . --check",
         "format:fix": "prettier . --fix",
         "prepare": "husky",
-        "migrate:dev":"cross-env MIGRATE_MODE=development node script/migration.js",
-        "migrate:prod":"cross-env MIGRATE_MODE=production node script/migration.js"
+        "migrate:dev": "cross-env MIGRATE_MODE=development node script/migration.js",
+        "migrate:prod": "cross-env MIGRATE_MODE=production node script/migration.js"
     },
     "lint-staged": {
         "*.ts": [
@@ -46,6 +46,7 @@
         "cross-env": "^7.0.3",
         "dotenv-flow": "^4.1.0",
         "express": "^4.21.0",
+        "moment": "^2.30.1",
         "mongoose": "^8.7.0",
         "source-map-support": "^0.5.21",
         "ts-migrate-mongoose": "^3.8.4",
