--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "cross-env": "^7.0.3",
         "dotenv-flow": "^4.1.0",
         "express": "^4.21.0",
+        "helmet": "^8.0.0",
         "moment": "^2.30.1",
         "mongoose": "^8.7.0",
         "source-map-support": "^0.5.21",
