--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "format:fix": "prettier . --fix",
         "prepare": "husky",
         "migrate:dev": "cross-env MIGRATE_MODE=development node script/migration.js",
-        "migrate:prod": "cross-env MIGRATE_MODE=production node script/migration.js"
+        "migrate:prod": "cross-env MIGRATE_MODE=production node script/migration.js",
+        "test": "jest --watch --runInBand"
     },
     "lint-staged": {
         "*.ts": [
@@ -29,14 +30,19 @@
         "@eslint/js": "^9.11.1",
         "@types/eslint__js": "^8.42.3",
         "@types/express": "^5.0.0",
+        "@types/jest": "^29.5.13",
         "@types/node": "^22.7.4",
         "@types/source-map-support": "^0.5.10",
+        "@types/supertest": "^6.0.2",
         "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.1.6",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.10",
         "nodemon": "^3.1.7",
         "prettier": "3.3.3",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.8.0"
