--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     },
     "dependencies": {
         "@types/cors": "^2.8.17",
+        "axios": "^1.7.7",
+        "cheerio": "^1.0.0",
         "colorette": "^2.0.20",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
@@ -57,6 +59,9 @@
         "helmet": "^8.0.0",
         "moment": "^2.30.1",
         "mongoose": "^8.7.0",
+        "puppeteer": "^23.8.0",
+        "puppeteer-extra": "^3.3.6",
+        "puppeteer-extra-plugin-stealth": "^2.11.2",
         "rate-limiter-flexible": "^5.0.3",
         "source-map-support": "^0.5.21",
         "ts-migrate-mongoose": "^3.8.4",
